# rover-work-sample

./: README.md
auton_typing_project/: README.md
auton_typing_project/arm_typing/: package.xml  setup.cfg  setup.py
auton_typing_project/arm_typing/arm_typing/: auton_typing_server.py  character_typer.py  config_parser.py
auton_typing_project/arm_typing/config/: comp_keyboard.yaml  test_keyboard.yaml
auton_typing_project/arm_typing/launch/: arm_typing_launch.xml
dynamixel_work/: README.md  dynamixel_control.py
dynamixel_work/dynamixel_sdk_mods/: group_bulk_read.py
life-detection-system-2023/: README.md
life-detection-system-2023/ld_board_2023/: CMakeLists.txt  README.md  build.sh  main.cpp
life-detection-system-2023/ld_board_2023/lib/light_sensor/: CMakeLists.txt  light_sensor.cpp  light_sensor.h
life-detection-system-2023/ld_board_2023/lib/linearActuator/: CMakeLists.txt  linearActuator.cpp  linearActuator.h
life-detection-system-2023/ld_board_2023/lib/threads/actuator_thread/: CMakeLists.txt  actuator_thread.h
life-detection-system-2023/ld_board_2023/lib/threads/light_sensor_thread/: CMakeLists.txt  light_sensor_thread.h
life-detection-system-2023/ld_board_2023/lib/threads/pump_thread/: CMakeLists.txt  pump_thread.h
life-detection-system-2023/ros_package/: ld_board.py  ld_joy_control.py
life-detection-system-2023/ui_work/science/: Science.tsx  actuatorFrame.tsx  lightFrame.tsx  lightSensor.tsx  pumpFrame.tsx
life-detection-system-2024/: README.md
life-detection-system-2024/auger_2024/: .clang-format  CMakeLists.txt  README.md  build.sh  main.cpp
life-detection-system-2024/auger_2024/lib/: sketch_may27.ino
life-detection-system-2024/auger_2024/threads/: temp_thread.cpp
life-detection-system-2024/ros2_package/life_detection/: package.xml  setup.cfg  setup.py
life-detection-system-2024/ros2_package/life_detection/launch/: ld_base_launch.xml  ld_rover_launch.xml
life-detection-system-2024/ros2_package/life_detection/life_detection/: carousel_control.py  ld_board.py  life_detection_joy.py  uv_spec_forwarder.py
onboarding_ros2_curriculum/: README.md
onboarding_ros2_curriculum/rover_ros_onboarding/ros2_ws/src/demo_msgs/: CMakeLists.txt  package.xml
onboarding_ros2_curriculum/rover_ros_onboarding/ros2_ws/src/demo_msgs/msg/: MotorState.msg
onboarding_ros2_curriculum/rover_ros_onboarding/ros2_ws/src/demo_package/: package.xml  setup.py
onboarding_ros2_curriculum/rover_ros_onboarding/ros2_ws/src/demo_package/demo_package/: motor_controller.py  motor_degree.py
onboarding_ros2_curriculum/rover_ros_onboarding/ros2_ws/src/demo_package/launch/: my_launch.xml
